Fixed the navbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap');
 * {
     box-sizing: border-box;
     margin: 0;
@@ -6,11 +7,18 @@
 
 html {
     font-size: 18px;
+    font-family: 'Public Sans', sans-serif;
 }
 
 nav {
     display: flex;
+    width: 100%;
     justify-content: space-around;
+    padding: 15px 0;
+    position: fixed;
+    z-index: 5;
+    background-color: hsl(0, 0%, 100%);
+    border: 3px solid red;
 }
 
 .site-logo {
@@ -18,17 +26,82 @@ nav {
     border: 3px solid red;
 }
 
-nav ul li {
-    display: inline;
+.links ul li {
+    display: inline-block;
+    padding: 20px 20px;
+}
+
+.links li a {
+    text-decoration: none;
+    padding-bottom: 17px;
+    color: hsl(233, 8%, 62%);
+}
+
+.links li a:hover {
+    border-bottom: 4px solid hsl(233, 26%, 24%);
+    border-image: linear-gradient(to left, hsl(136, 65%, 51%), hsl(192, 70%, 51%))10;
+    color: hsl(0, 0%, 0%);
+}
+
+.button {
+    border-radius: 50px;
+    border: none;
+    text-align: center;
+    font-weight: 700;
+    font-size: 1rem;
+    width: 14%;
+    color: hsl(0, 0%, 100%);
+    background-image: linear-gradient(to right, hsl(136, 65%, 51%), hsl(192, 70%, 51%));
+    cursor: pointer;
+    transition: .5s;
+    border: none;
+    outline: none;
+}
+
+.button:hover {
+    background-position: right;
 }
 
 .hero {
-    background: url(../images/bg-intro-desktop.svg);
+    display: flex;
+    justify-content: center;
+    flex-direction: row-reverse;
     background-repeat: space;
-    background-position: right;
-    background-size: cover;
-    background-attachment: scroll;
-    vertical-align: middle;
     border: 2px solid red;
+    position: relative;
+    top: 100px;
+    bottom: 90px;
+}
+
+.bg-img {
+    margin: 0 auto;
+}
+
+.intro-img {
     width: 100%;
+    /* margin: 100px; */
+    /* background-position: right; */
+    /* background-size: contain; */
+    /* background-attachment: scroll; */
+    /* position: relative; */
+    /* z-index: -2; */
+    /* display: block; */
+    /* left: -50px; */
+}
+
+.intro-mock {
+    position: relative;
+    z-index: 1;
+    display: inline-block;
+    width: 20%;
+    bottom: 100px;
+    left: 200px;
+}
+
+.intro-mock img {
+    /* width: 100%; */
+}
+
+.content {
+    z-index: -1;
 }
